<resources>
    <string name="app_name">Code Test - Dans Multipro</string>
    <string name="label_job_list">Job List</string>
    <string name="label_empty">Data kosong</string>
    <string name="label_job_description">Job description</string>
    <string name="label_location">Location</string>
    <string name="label_job_type">Job type</string>
    <string name="label_company">Company</string>
    <string name="label_job_title">Job title</string>
    <string name="label_go_to_website">Go to website</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">login</string>
    <string name="label_full_time">Full time</string>
    <string name="btn_apply_filter">apply filter</string>
</resources>