<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.ListActivity">
    <TextView
        android:id="@+id/label_empty"
        style="@style/textview_label"
        android:text="@string/label_empty"
        android:visibility="gone"
        android:layout_centerInParent="true"/>
    <androidx.cardview.widget.CardView
        android:id="@+id/container"
        style="@style/container_cardview"
        android:layout_margin="0dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/list_title"
                style="@style/textview_title"
                android:layout_gravity="center"
                android:layout_margin="16dp"
                android:text="@string/label_job_list"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <SearchView
                    android:id="@+id/searchView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:iconifiedByDefault="false"
                    android:queryHint="Search here.."
                    android:layout_marginBottom="8dp"
                    android:layout_toStartOf="@id/image_arrow"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"/>
                <ImageView
                    android:id="@+id/image_arrow"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_margin="5dp"
                    android:layout_centerVertical="true"
                    android:layout_alignParentEnd="true"
                    android:src="@drawable/ic_arrow_down"/>
            </RelativeLayout>
            <androidx.cardview.widget.CardView
                android:id="@+id/container_filter"
                style="@style/container_cardview"
                android:layout_marginTop="8dp"
                android:visibility="gone">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        style="@style/textview_label"
                        android:text="@string/label_full_time"
                        android:layout_margin="8dp"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"/>
                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/switch_fulltime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:checked="false"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentTop="true"
                        tools:ignore="UseSwitchCompatOrMaterialXml" />
                    <TextView
                        android:id="@+id/label_location"
                        style="@style/textview_label"
                        android:text="@string/label_location"
                        android:layout_margin="8dp"
                        android:layout_alignParentStart="true"
                        android:layout_below="@id/switch_fulltime"/>
                    <EditText
                        android:id="@+id/search_location"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@id/label_location"
                        android:layout_alignParentEnd="true"
                        android:layout_below="@id/switch_fulltime"/>
                    <Button
                        android:id="@+id/btn_filter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:backgroundTint="@color/blue_light"
                        android:text="@string/btn_apply_filter"
                        android:layout_alignParentEnd="true"
                        android:layout_below="@id/search_location"/>
                </RelativeLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_jobs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/container"
        android:layout_centerInParent="true"
        android:layout_marginTop="8dp"
        tools:listitem="@layout/item_jobs"/>
</RelativeLayout>