<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_light"
    tools:context=".ui.LoginActivity">
    <androidx.cardview.widget.CardView
        style="@style/container_cardview"
        android:layout_centerInParent="true"
        android:layout_margin="16dp"
        android:backgroundTint="#E6FFFFFF">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingRight="16dp"
                android:paddingLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/blue_light"
                    android:backgroundTint="@color/white"
                    android:hint="@string/hint_username"
                    android:id="@+id/login_username"/>

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingRight="16dp"
                android:paddingLeft="16dp"
                android:layout_marginBottom="8dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/blue_light"
                    android:backgroundTint="@color/white"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"
                    android:id="@+id/login_password"/>

            </com.google.android.material.textfield.TextInputLayout>
            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/btn_login"
                android:textColor="@color/white"
                android:backgroundTint="@color/blue_light"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>